# MADMESHR

./: .gitignore  CLAUDE.md  MeshEnvironment.py  PLAN.md  README.md  SAC.py  TRAINING_PLAN.md  annulus_oracle_type2.py  main.py  pyproject.toml  quality_diagnostic.py  requirements.txt  sandbox-recover_faces_from_edges  sandbox.ipynb  test_domains.py  test_sac_domains.py  trainer.py  validate_mesh.py
doc/development_Notes/: Session1a_Plan.md
doc/development_notes/: PLANNING_METHODOLOGY.md  session0_report.md  session_10_plan.md  session_10_report.md  session_11_plan.md  session_11_report.md  (+28 more)
domains/: annulus_17v_active.npy  annulus_17v_sub_0_3v.npy  annulus_17v_sub_1_7v.npy  annulus_17v_sub_2_4v.npy  annulus_25v_active.npy  annulus_25v_sub_1_3v.npy  annulus_29v_active.npy  annulus_29v_fig8_25v.npy  annulus_29v_fig8_4v.npy  annulus_29v_remaining.npy  annulus_29v_subloop_0_5v.npy  annulus_29v_subloop_2_9v.npy  annulus_active_28v.npy  annulus_active_29v.npy  annulus_layer2.npy  annulus_subloop_18v.npy  annulus_subloop_4v_fig8.npy  annulus_subloop_5v_fig8.npy  annulus_subloop_6v.npy  annulus_subloop_7v.npy  annulus_subloop_9v.npy
madmeshr/: discrete_action_env.py  dqn.py  mesh_environment.py  trainer.py  trainer_dqn.py
results/: assessment.md
scripts/: __init__.py  annulus_oracle_type2.py  assemble_annulus.py  eval_ablation.py  eval_checkpoints.py  extract_subloop.py  quality_diagnostic.py  test_domains.py  validate_mesh.py
src/: DQN.py  DiscreteActionEnv.py  MeshEnvironment.py  SAC.py  __init__.py  trainer.py  trainer_dqn.py
tests/: test_discrete_env.py
(+15 files in other folders)
